enum InvoiceStatus { draft, unpaid, partiallyPaid, paid, voided }
